--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
     <div>
     <p>Deseja comprar esse celular</p>   
 
-    Clique no telefone para comparar <a href="https://api.whatsapp.com/send?phone=5547984349762&text=Ol%E1%20gostaria%20de%20mais%20informa%E7%F5es%20sobre%20o%20produto%21" target="blank">Clique para saber mais</a> 
+    Clique no telefone para comparar *** <a href="https://api.whatsapp.com/send?phone=5547984349762&text=Ol%E1%20gostaria%20de%20mais%20informa%E7%F5es%20sobre%20o%20produto%21" target="blank">Clique para saber mais</a> 
     <img src="https://images.lojaiplace.com.br/imagens/large/iphone-11-pro-max-prata_z_large.jpg?ims=410x410">        
     </div>    
   </body>
